# sauros

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  format.sh
.circleci/: config.yml
.github/: pull_request_template.md
app/: CMakeLists.txt  buffer.cpp  buffer.hpp  load.cpp  load.hpp  main.cpp  repl.cpp  repl.hpp
bench/: 4sieve.sau  4sieve.saur  fractal.sau  mandelbrot.sau  mandlebrot.profile  marks.md  primality.sau  primality.saur  primes.py  run.py
cmake/: Config.cmake.in  ConfigVersion.cmake.in  InstallConfig.cmake  LibraryConfig.cmake  Uninstall.cmake.in
embedded_example/: CMakeLists.txt  example.sau  main.cpp
example_code/: ABOUT.md  guessing_game.sau  guessing_game.saur  mandelbrot.saur  scope_example.saur  scramble.sau  sierpinski.saur
example_code/app_dir/: app.saur  main.saur
example_code/async_thread/: async.saur  chan.saur  multi_thread.saur
example_code/library_checkout_system/: main.saur
example_code/todo/: todo.saur
examples/: populate_list_and_average.sau
examples/embedded_example/: CMakeLists.txt  main.cpp
examples/example_code/: file_io.saur  guessing_game.sau  mandelbrot.sau  mandelbrot.saur  nsieve.sau  nsieve.saur  ref.sau  ref.saur  scramble.sau  sierpinski.sau
generate/: version.hpp.in
libs/: ABOUT.md  install.py
libs/example/: CMakeLists.txt  manifest.sau
libs/io/: CMakeLists.txt  manifest.sau
libs/std/: ABOUT.md  CMakeLists.txt  manifest.sau
libsauros/: CMakeLists.txt
libsauros/cmake/: CheckGit.cmake  LibraryConfig.cmake
libsauros/sauros/: builtin_encodings.hpp  cell.hpp  driver.cpp  driver.hpp
pkgs/: README.md  install.py
pkgs/file_io/: CMakeLists.txt  file_io.cpp  file_io.hpp  file_io.saur  pkg.saur
pkgs/fmt/: CMakeLists.txt  fmt.cpp  fmt.hpp  fmt.sau  fmt.saur  pkg.sau  pkg.saur
pkgs/io/: CMakeLists.txt  io.cpp  io.hpp  pkg.sau  pkg.saur  prompt.sau
pkgs/list_ext/: CMakeLists.txt  list_ext.cpp  list_ext.hpp  list_ext.sau  list_ext.saur  pkg.sau  pkg.saur
pkgs/math/: CMakeLists.txt  math.cpp  math.hpp  math.sau  math.saur  pkg.sau  (+1 more)
sauros/: ast.cpp  ast.hpp  cell.hpp  environment.cpp  environment.hpp  list.hpp  parser.cpp  parser.hpp  sauros.hpp  types.hpp  version.hpp
scripts/: install_cpputest.sh  package_install.sh  setup_ci.sh
src/: CMakeLists.txt  build.py  build_and_install.sh  creator.cpp  creator.hpp  dir_loader.cpp  dir_loader.hpp  main.cpp
src/app/: CMakeLists.txt  main.cpp
src/app/src/: creator.cpp  creator.hpp  dir_loader.cpp  dir_loader.hpp  main.cpp
src/app/src/management/: fetch.cpp  fetch.hpp  package.cpp  package.hpp
src/app/test_scripts/: ABOUT.md  run.py
src/app/test_scripts/tests/: 0_as.saur  0_as_list.saur  0_async_chan.sau  0_async_chan.saur  0_bitwise.sau  0_bitwise.saur  0_box_cloning.sau  0_box_cloning.saur  0_boxs.saur  0_break.sau  0_break.saur  0_compose_decompose.sau  0_compose_decompose.saur  0_fmt_package.sau  0_fmt_package.saur  0_imports.sau  0_iter.sau  0_lambda.sau  0_list_ext_package.sau  0_loops.sau  0_loops.saur  0_mandelbrot.sau  0_math_package.sau  0_os.saur  0_primes.sau  0_refs.sau  0_refs.saur  0_rev.sau  0_rev.saur  0_set.sau  0_set.saur  0_set_at.sau  0_std_list.saur  0_truthy.sau  0_truthy.saur  0_try.sau  0_type_conversions.sau  0_use_file.saur  0_yield.sau  0_yield.saur  (+9 more)
src/cmake/: SetEnv.cmake
src/generate/: version.hpp.in
src/libsauros/: CMakeLists.txt
src/libsauros/cmake/: LibraryConfig.cmake
src/libsauros/sauros/: builtin_encodings.hpp  cell.cpp  cell.hpp  cell_map.hpp  driver.cpp  driver.hpp  environment.cpp  environment.hpp  exceptions.hpp  format.hpp  profiler.cpp  profiler.hpp  rang.hpp  sauros.hpp  system.hpp  types.hpp
src/libsauros/sauros/RLL/: rll_wrapper.cpp  rll_wrapper.hpp
src/libsauros/sauros/RLL/platform/: sl_windows_impl.inl
src/libsauros/sauros/capi/: capi.cpp  capi.hpp
src/libsauros/sauros/front/: parser.cpp  parser.hpp
src/libsauros/sauros/linenoise/: linenoise.hpp
src/libsauros/sauros/modules/: module_if.cpp  module_if.hpp
src/libsauros/sauros/modules/io/: io.cpp
src/libsauros/sauros/modules/random/: random.cpp
src/libsauros/sauros/modules/sys/: sys.cpp
src/libsauros/sauros/package/: package.cpp  package.hpp
src/libsauros/sauros/parallel_hashmap/: btree.hpp  meminfo.hpp  phmap.hpp  phmap_base.hpp  phmap_bits.hpp  phmap_config.hpp  phmap_dump.hpp  phmap_fwd_decl.hpp  phmap_utils.hpp
src/libsauros/sauros/processor/: processor.cpp  processor.hpp  processor_arithmetic.cpp  processor_builtins.cpp  processor_load_file.cpp  processor_load_package.cpp
src/libsauros/sauros/system/: system.cpp  system.hpp
src/libsauros/tests/: CMakeLists.txt  main.cpp  sauros_tests.cpp
src/sauros/: builtin_encodings.hpp  cell.hpp  cell_map.hpp  driver.cpp  driver.hpp  environment.cpp  environment.hpp  modules.cpp  modules.hpp  node.hpp  rang.hpp  sauros.hpp  version.hpp
src/sauros/RLL/: RLL.hpp
src/sauros/RLL/platform/: sl_unix_impl.inl
src/sauros/front/: parser.cpp  parser.hpp
src/sauros/modules/: module_if.cpp  module_if.hpp
src/sauros/modules/fs/: fs.cpp  fs.hpp
src/sauros/modules/io/: io.cpp  io.hpp
src/sauros/modules/math/: math.cpp  math.hpp
src/sauros/modules/random/: random.cpp  random.hpp
src/sauros/modules/sys/: sys.cpp  sys.hpp
src/sauros/parallel_hashmap/: btree.hpp  phmap.hpp  phmap_base.hpp  phmap_bits.hpp  phmap_config.hpp  phmap_utils.hpp
src/sauros/processor/: processor.cpp  processor.hpp  processor_arithmetic.cpp  processor_builtins.cpp  processor_load_lib.cpp  processor_load_package.cpp
src/sauros/system/: system.cpp  system.hpp
src/stdlib/std/: cli  cli.sau
src/test_scripts/tests/: 0_box_cloning.saur  0_boxs.sau  0_compose_decompose.sau  0_compose_decompose.saur  0_file_io.saur  0_fmt_package.saur  0_iter.saur  0_lambda.saur  0_loops.sau  0_mandelbrot.saur  0_math_package.saur  0_objects.sau  0_set_at.saur  0_try.saur
src/tests/: CMakeLists.txt  sauros_tests.cpp
std/: install.py  loop  string  string.sau  switch
test_scipts/: ABOUT.md  run.py
tests/: CMakeLists.txt  main.cpp  sauros_tests.cpp
vscode-extension/: install.sh
(+106 files in other folders)
